# paper_theater01

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_EXPLANATION.md  PROJECT_OVERVIEW.md  README.md  VOICE_MODE_README.md  conversation_app.py  pyproject.toml  scenario_manager.py  test_basic_functionality.py  test_json_display.py  test_scenario.py  yaml_scenario_loader.py
.claude/: settings.local.json
core/: __init__.py  conversation_manager.py  text_handler.py  transcript_analyzer.py  voice_handler.py
prompts/: scenario.yaml  system_prompt.txt
renderers/: __init__.py  base_renderer.py  paper_theater_renderer.py
